@@ -1,3 +1,11 @@
+2008-01-08  Sebastien Pouliot  <sebastien@ximian.com> 
+
+	* AvoidUncalledPrivateCodeRule.cs: Don't report any serialization
+	constructors since they are invoked by the runtime.
+	* DontIgnoreMethodResultRule.cs: Don't report BeginInvoke methods
+	that accept a Delegate (for any type). Better error reporting when a
+	new unused instance is created.
+
 2008-01-06  Sebastien Pouliot  <sebastien@ximian.com> 
 
 	* AvoidToStringOnStringsRule.cs: Fix false positives on corlib (when
